--- a/airbyte-integrations/connectors/source-leaflink/source_leaflink/spec.yaml
+++ b/airbyte-integrations/connectors/source-leaflink/source_leaflink/spec.yaml
@@ -11,6 +11,10 @@ connectionSpecification:
       type: string
       description: API access key used to retrieve data from the Leaflink API.
       airbyte_secret: true
+    base_url:
+      type: string
+      description: Base URL for leaflink api
+      default: https://www.leaflink.com/api/v2
     start_date:
       type: string
       description: Start getting data from that date.
