--- a/airbyte-integrations/connectors/source-leaflink/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/source-leaflink/sample_files/configured_catalog.json
@@ -379,10 +379,9 @@
                   "type": ["null", "object"],
                   "properties": {
                     "original": {
-                      "type": ["null", "string"],
-                      "format": "date-time"
+                      "type": ["null", "string"]
                     },
-                    "new": { "type": ["null", "string"], "format": "date-time" }
+                    "new": { "type": ["null", "string"] }
                   }
                 }
               }
