--- a/airbyte-integrations/connectors/source-leaflink/source_leaflink/spec.yaml
+++ b/airbyte-integrations/connectors/source-leaflink/source_leaflink/spec.yaml
@@ -14,7 +14,7 @@ connectionSpecification:
     base_url:
       type: string
       description: Base URL for leaflink api
-      default: https://www.leaflink.com/api/v2
+      default: https://www.leaflink.com/api/v2/
     start_date:
       type: string
       description: Start getting data from that date.
